Added Hyperparameter tuning using RandomizedSearch

--- a/env.example
+++ b/env.example
@@ -26,6 +26,11 @@ DATA_PATH=data/churn.csv
 # Name of the target column in the CSV
 TARGET_COLUMN=churn
 
+# Hyperparameter tuning (optional)
+# Set to "1", "true", or "yes" to enable RandomizedSearchCV hyperparameter tuning
+# This will test 30 parameter combinations with 3-fold CV (takes longer but may improve performance)
+ENABLE_HYPERPARAMETER_TUNING=false
+
 # =============================================================================
 # Feast Feature Store Configuration (Optional)
 # =============================================================================
